--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.0 <3.0.0"
 
 dependencies:
   validators: ^2.0.0
@@ -27,6 +27,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.5
+  firebase_database: ^3.1.5
 
 dev_dependencies:
   flutter_test:
