user profile page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,9 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  font_awesome_flutter: ^8.8.1
   cupertino_icons: ^0.1.2
   flappy_search_bar: ^1.7.2
   validators: ^2.0.0
+  curved_navigation_bar: ^0.3.2
 
 
 dev_dependencies:
@@ -21,5 +23,5 @@ dev_dependencies:
 
 flutter:
   assets:
-    - assets/images/
+    - images/
 
