--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,16 @@ dependencies:
   cupertino_icons: ^0.1.2
   flappy_search_bar: ^1.7.2
   validators: ^2.0.0
+  cloud_firestore: ^0.13.0+1
+  font_awesome_flutter: ^8.8.1
+
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
 flutter:
   assets:
