--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,8 @@ dev_dependencies:
     sdk: flutter
 
 
-
-flutter:
-  assets:
-    - assets/images/
+#flutter:
+ # uses-material-design: true
+  #assets:
+   #- images/aspirin.jpeg
 
