--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,13 +18,11 @@ dependencies:
   firebase_auth: ^0.16.1
   flutter_alert: ^0.4.0
   rflutter_alert: ^1.0.3
-
-
+  flutter_spinkit: ^4.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
 
 
 flutter:
